fix width error on small display

--- a/src/App.css
+++ b/src/App.css
@@ -197,6 +197,9 @@ a:hover {
   .about-me-text {
     width: 80vw;
   }
+  img{
+    width: 80vw;
+  }
   .menu-list{
     height:5vh;
 
